Renamed string srs -> srsran to be in sync with other bp
Signed-off-by: Marikkannu, Suresh <suresh.marikkannu@intel.com>

--- a/roles/gNb/defaults/main.yml
+++ b/roles/gNb/defaults/main.yml
@@ -1,7 +1,7 @@
-srs:
+srsran:
   docker:
     container:
-      gnb_image: srsran/srs-gnb:latest
+      gnb_image: srsran-gnb:latest
     network:
       name: public_net
   simulation: true
