--- a/roles/gNb/templates/gnb_zmq.conf
+++ b/roles/gNb/templates/gnb_zmq.conf
@@ -7,7 +7,7 @@ cu_cp:
   amf:
     addr: "{{ core.amf.ip }}"                 # The address or hostname of the AMF.
     port: 38412
-    bind_addr: "{{srs.gnb.ip}}"            # A local IP that the gNB binds to for traffic from the AMF.
+    bind_addr: "{{srsran.gnb.ip}}"            # A local IP that the gNB binds to for traffic from the AMF.
     supported_tracking_areas:
       - tac: 1
         plmn_list:
