--- a/roles/router/tasks/main.yml
+++ b/roles/router/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: install oai/router
+- name: install srsran/router
   import_tasks: roles/router/tasks/install.yml
   tags: install
 
-- name: uninstall oai/router
+- name: uninstall srsran/router
   import_tasks: roles/router/tasks/uninstall.yml
   tags: uninstall
