--- a/roles/router/tasks/uninstall.yml
+++ b/roles/router/tasks/uninstall.yml
@@ -3,10 +3,10 @@
 - set_fact:
     systemd_network_dir: /etc/systemd/network
 
-- name: "remove a static route on srs host for {{ core.upf.ip_prefix }} via {{ core.amf.ip }}"
+- name: "remove a static route on srsran host for {{ core.upf.ip_prefix }} via {{ core.amf.ip }}"
   shell: |
     ip route del {{ core.upf.ip_prefix }} via {{ core.amf.ip }}
-  when: (inventory_hostname in groups['srs_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
   ignore_errors: yes
 
@@ -16,7 +16,7 @@
     value: '0'
     sysctl_set: true
     reload: true
-  when: (inventory_hostname in groups['srs_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
 
 - name: set net.ipv4.conf.all.arp_ignore to 0
@@ -25,7 +25,7 @@
     value: '0'
     sysctl_set: true
     reload: true
-  when: (inventory_hostname in groups['srs_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
 
 - name: set net.ipv4.conf.all.arp_announce to 0
@@ -34,7 +34,7 @@
     value: '0'
     sysctl_set: true
     reload: true
-  when: (inventory_hostname in groups['srs_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
 
 - name: set net.ipv4.conf.all.rp_filter to 2
@@ -43,18 +43,18 @@
     value: '2'
     sysctl_set: true
     reload: true
-  when: (inventory_hostname in groups['srs_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
 
 - name: force systemd to reread configs
   systemd:
     daemon_reload: true
-  when: inventory_hostname in groups['srs_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes'][0]
   become: true
 
 - name: restart systemd-networkd
   systemd:
     name: systemd-networkd
     state: restarted
-  when: inventory_hostname in groups['srs_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes'][0]
   become: true
