--- a/hosts.ini
+++ b/hosts.ini
@@ -2,7 +2,7 @@
 gnbsimNode1 ansible_host=172.16.193.6 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 onramp1 ansible_host=172.16.41.103 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 
-[srs_nodes]
+[srsran_nodes]
 gnbsimNode1
 
 [master_nodes]
