--- a/roles/docker/tasks/install.yml
+++ b/roles/docker/tasks/install.yml
@@ -3,21 +3,21 @@
 - name: update apt cache
   apt:
     update_cache: true
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Delete previous apt sources (1)
   ansible.builtin.file:
     path: /etc/apt/sources.list.d/docker.list
     state: absent
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Delete previous apt sources (2)
   ansible.builtin.file:
     path: /etc/apt/sources.list.d/download_docker_com_linux_ubuntu.list
     state: absent
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: install required system packages
@@ -31,7 +31,7 @@
       - virtualenv
       - python3-setuptools
     state: latest
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Create directory for Docker's GPG key
@@ -39,7 +39,7 @@
     path: /etc/apt/keyrings
     state: directory
     mode: '0755'
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Download Docker GPG key
@@ -49,7 +49,7 @@
     mode: '0644'
     owner: root
     group: root
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Add Docker repository to APT sources
@@ -61,33 +61,33 @@
     repo: "deb [arch={{ arch_mapping[ansible_architecture] | default(ansible_architecture) }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable"
     state: present
     filename: docker
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: update apt cache
   apt:
     update_cache: true
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: install docker-ce
   apt:
     name: docker-ce
     state: latest
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: install docker module for Python
   pip:
     name: docker
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: pull hello-world docker image
   community.docker.docker_image:
     name: "hello-world"
     source: pull
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: create hello-world container
@@ -96,14 +96,14 @@
     image: "hello-world"
     state: started
     auto_remove: true
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Create docker group
   group:
     name: docker
     state: present
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: Add current user to docker group
@@ -111,7 +111,7 @@
     name: "{{ ansible_user }}"
     groups: docker
     append: yes
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 # hack for docker to run as user
@@ -119,6 +119,6 @@
   shell:
     cmd: |
       chown {{ ansible_user }} /var/run/docker.sock
-  when: inventory_hostname in groups['srs_nodes']
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
