--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: install srs/docker
+- name: install srsran/docker
   import_tasks: roles/docker/tasks/install.yml
   tags: install
 
-- name: uninstall srs/docker
+- name: uninstall srsran/docker
   import_tasks: roles/docker/tasks/uninstall.yml
   tags: uninstall
