--- a/roles/gNb/tasks/main.yml
+++ b/roles/gNb/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: start srs/gNb
+- name: start srsran/gNb
   import_tasks: roles/gNb/tasks/start.yml
   tags: start
 
-- name: stop srs/gNb
+- name: stop srsran/gNb
   import_tasks: roles/gNb/tasks/stop.yml
   tags: stop
