--- a/roles/uEsimulator/tasks/main.yml
+++ b/roles/uEsimulator/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: start srs/uEsimulator
+- name: start srsran/uEsimulator
   import_tasks: roles/uEsimulator/tasks/start.yml
   tags: start
 
-- name: stop srs/uEsimulator
+- name: stop srsran/uEsimulator
   import_tasks: roles/uEsimulator/tasks/stop.yml
   tags: stop
