--- a/hosts.ini
+++ b/hosts.ini
@@ -1,9 +1,9 @@
 [all]
-gnbsimNode1 ansible_host=172.16.193.6 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
+srsRanNode1 ansible_host=172.16.193.6 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 onramp1 ansible_host=172.16.41.103 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 
 [srsran_nodes]
-gnbsimNode1
+srsRanNode1
 
 [master_nodes]
 onramp1
