--- a/roles/gNB/defaults/main.yml
+++ b/roles/gNB/defaults/main.yml
@@ -1,7 +1,7 @@
 srsran:
   docker:
     container:
-      gnb_image: srsran-gnb:latest
+      gnb_image: aetherproject/srsran-gnb:rel-0.0.1
     network:
       name: public_net
   simulation: true
