--- a/roles/uEsimulator/defaults/main.yml
+++ b/roles/uEsimulator/defaults/main.yml
@@ -1,7 +1,7 @@
 srsran:
   docker:
     container:
-      ue_image: srsran-ue:latest
+      ue_image: aetherproject/srsran-ue:rel-0.0.1
     network:
       name: public_net
 
