--- a/roles/uEsimulator/tasks/start.yml
+++ b/roles/uEsimulator/tasks/start.yml
@@ -50,12 +50,12 @@
 
 - name: add default route for UE
   shell: |
-    docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ip route add default via {{ core.upf.default_upf.ue_ip_pool | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address')}} dev tun_srsue
+    docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ip route add default via {{ (core.upf.default_upf.ue_ip_pool.split('.'))[:3] | join('.') }}.{{ (core.upf.default_upf.ue_ip_pool.split('.')[3] | int) + 1 }} dev tun_srsue
   when: inventory_hostname in groups['srsran_nodes'][0]
 
 - name: run ping command to check if the UE is running and show output
   shell: |
-    docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ping -c 5 {{ core.upf.default_upf.ip.core | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address')}}
+    docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ping -c 5 {{ (core.upf.default_upf.ip.core.split('.'))[:3] | join('.') }}.{{ (core.upf.default_upf.ip.core.split('.')[3] | int) + 1 }}
   register: uEsimPingOutput
   when: inventory_hostname in groups['srsran_nodes'][0]
 
