Make log to be printed when using `docker logs`
Signed-off-by: Arrobo, Gabriel <gabriel.arrobo@intel.com>

--- a/roles/gNB/templates/gnb_zmq.conf
+++ b/roles/gNB/templates/gnb_zmq.conf
@@ -41,7 +41,7 @@ cell_cfg:
     prach_config_index: 1           # Sets PRACH config to match what is expected by srsUE
 
 log:
-  filename: /tmp/gnb.log            # Path of the log file.
+  filename: stdout                  # Path of the log file.
   all_level: info                   # Logging level applied to all layers.
   hex_max_size: 0
 
