Fix an issue with `scs` and other minor changes
Signed-off-by: Arrobo, Gabriel <gabriel.arrobo@intel.com>

--- a/roles/gNB/tasks/start.yml
+++ b/roles/gNB/tasks/start.yml
@@ -23,7 +23,7 @@
 
 - name: create {{ srsran.docker.container.gnb_image }} containers
   community.docker.docker_container:
-    name: "rfsim5g-srsran-gnb"
+    name: "srsran-gnb"
     image: "{{ srsran.docker.container.gnb_image }}"
     networks:
       - name: "{{ srsran.docker.network.name }}"
