--- a/roles/router/tasks/uninstall.yml
+++ b/roles/router/tasks/uninstall.yml
@@ -3,9 +3,9 @@
 - set_fact:
     systemd_network_dir: /etc/systemd/network
 
-- name: "remove a static route on srsran host for {{ core.upf.access_subnet }} via {{ core.amf.ip }}"
+- name: "remove a static route on srsran host for {{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }} via {{ core.amf.ip }}"
   shell: |
-    ip route del {{ core.upf.access_subnet }} via {{ core.amf.ip }}
+    ip route del {{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }} via {{ core.amf.ip }}
   when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
   ignore_errors: yes
