--- a/roles/router/tasks/install.yml
+++ b/roles/router/tasks/install.yml
@@ -41,11 +41,12 @@
 
 - name: configure static route for upf traffic on srsran node
   shell: |
-    ip route add {{ core.upf.ip_prefix }} via {{ core.amf.ip }}
+    ip route add {{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }} via {{ core.amf.ip }}
   when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
   become: true
   ignore_errors: yes
 
+# TODO: use ansible's net_static_route module
 - name: configure static route for srsran traffic on aether node
   shell: |
     ip route add {{ srsran.docker.network.subnet }} via {{  hostvars[item]['ansible_default_ipv4']['address'] }}
