Set privileged to true for the srsGNB container
Signed-off-by: Marikkannu, Suresh <suresh.marikkannu@intel.com>

--- a/roles/gNB/tasks/start.yml
+++ b/roles/gNB/tasks/start.yml
@@ -29,6 +29,7 @@
       - name: "{{ srsran.docker.network.name }}"
     volumes:
       - /tmp/gnb_zmq.conf:/opt/gnb_zmq.conf
+    privileged: true
     state: started
     detach: true
   when: inventory_hostname in groups['srsran_nodes']
