Enable `srsRAN` blueprint to be deployed in Ubuntu 24.04 and older versions
Signed-off-by: Arrobo, Gabriel <gabriel.arrobo@intel.com>

--- a/roles/docker/tasks/install.yml
+++ b/roles/docker/tasks/install.yml
@@ -89,10 +89,20 @@
   when: inventory_hostname in groups['srsran_nodes']
   become: true
 
+- set_fact:
+    UBUNTU_VERSION: "{{ ansible_distribution_version }}"
+  when: inventory_hostname in groups['srsran_nodes']
+
 - name: install docker module for Python
   pip:
     name: docker
-  when: inventory_hostname in groups['srsran_nodes']
+  when: inventory_hostname in groups['srsran_nodes'] and UBUNTU_VERSION is version_compare('24.04', '<')
+  become: true
+
+- name: install python3-docker package
+  apt:
+    name: python3-docker
+  when: inventory_hostname in groups['srsran_nodes'] and UBUNTU_VERSION is version_compare('24.04', '>=')
   become: true
 
 - name: pull hello-world docker image
