Output only what is useful and update README
Signed-off-by: Arrobo, Gabriel <gabriel.arrobo@intel.com>

--- a/roles/docker/tasks/install.yml
+++ b/roles/docker/tasks/install.yml
@@ -7,7 +7,7 @@
 
 - name: print docker version output
   debug:
-    var: docker_valid
+    var: docker_valid.stdout
 
 - meta: end_play
   when: docker_valid.failed == false
