--- a/roles/router/tasks/install.yml
+++ b/roles/router/tasks/install.yml
@@ -39,7 +39,7 @@
 - name: configure static route for upf traffic on srsran node
   shell: |
     ip route add {{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }} via {{ core.amf.ip }}
-  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes']) and core.upf.multihop == false
   become: true
   ignore_errors: yes
 
