--- a/roles/gNB/tasks/stop.yml
+++ b/roles/gNB/tasks/stop.yml
@@ -7,17 +7,9 @@
   when: inventory_hostname in groups['srsran_nodes']
   become: true
 
-- name: remove /tmp/gnb_zmq.conf
+- name: remove /tmp/gnb_config.yaml
   file:
-    path: "/tmp/gnb_zmq.conf"
+    path: "/tmp/gnb_config.yaml"
     state: absent
-  when: inventory_hostname in groups['srsran_nodes']
-  become: true
-
-- name: remove {{ srsran.docker.container.gnb_image }} image
-  community.docker.docker_image:
-    name: "{{ srsran.docker.container.gnb_image }}"
-    state: absent
-    force_absent: true
   when: inventory_hostname in groups['srsran_nodes']
   become: true
