--- a/roles/gNB/templates/gnb_zmq.yaml
+++ b/roles/gNB/templates/gnb_zmq.yaml
@@ -1,8 +1,3 @@
-# This configuration file example shows how to configure the srsRAN Project gNB to allow srsUE to connect to it.
-# This specific example uses ZMQ in place of a USRP for the RF-frontend, and creates an FDD cell with 10 MHz bandwidth.
-# To run the srsRAN Project gNB with this config, use the following command:
-#   sudo ./gnb -c gnb_zmq.yaml
-
 cu_cp:
   amf:
     addr: "{{ core.amf.ip }}"                 # The address or hostname of the AMF.
@@ -39,6 +34,10 @@ cell_cfg:
       dci_format_0_1_and_1_1: false # Set correct DCI format (fallback)
   prach:
     prach_config_index: 1           # Sets PRACH config to match what is expected by srsUE
+  pdsch:
+    mcs_table: qam64                # Sets PDSCH MCS to 64 QAM
+  pusch:
+    mcs_table: qam64                # Sets PUSCH MCS to 64 QAM
 
 log:
   filename: stdout                  # Path of the log file.
