--- a/roles/gNB/tasks/stop.yml
+++ b/roles/gNB/tasks/stop.yml
@@ -13,3 +13,11 @@
     state: absent
   when: inventory_hostname in groups['srsran_nodes']
   become: true
+
+- name: remove {{ srsran.docker.container.gnb_image }} image
+  community.docker.docker_image:
+    name: "{{ srsran.docker.container.gnb_image }}"
+    state: absent
+    force_absent: true
+  when: inventory_hostname in groups['srsran_nodes']
+  become: true
