--- a/roles/uEsimulator/tasks/start.yml
+++ b/roles/uEsimulator/tasks/start.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: check if servers and config server length are equal
+  fail:
+    msg: "Number of srsran nodes and servers in config file are not equal"
+  when: srsran.servers|length != groups['srsran_nodes']|length
+
 - name: check if simluation is enabled else abort
   fail:
     msg: "Simulation is not enabled"
@@ -21,8 +26,10 @@
 
 - name : copy ue_zmq config file to /tmp/ue_zmq.conf
   template:
-    src: "{{ ROOT_DIR }}/{{ srsran.ue.conf_file }}"
+    src: "{{ ROOT_DIR }}/{{ srsran.servers[server_index | int].ue_conf }}"
     dest: /tmp/ue_zmq.conf
+  vars:
+    server_index: "{{ groups['srsran_nodes'].index(inventory_hostname) }}"
   when: inventory_hostname in groups['srsran_nodes']
   become: true
 
@@ -51,18 +58,18 @@
 - name: add default route for UE
   shell: |
     docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ip route add default via {{ (core.upf.default_upf.ue_ip_pool.split('.'))[:3] | join('.') }}.{{ (core.upf.default_upf.ue_ip_pool.split('.')[3] | int) + 1 }} dev tun_srsue
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
 
 - set_fact:
     ping_target: "{{ core.upf.core_subnet | regex_replace('(/.*$)', '') }}"
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
 
 - name: run ping command to check if the UE is running and show output
   shell: |
     docker exec rfsim5g-srsran-nr-ue ip netns exec ue1 ping -c 5 {{ ping_target }}
   register: uEsimPingOutput
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
 
 - debug:
     var: uEsimPingOutput.stdout_lines
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
