--- a/roles/uEsimulator/tasks/start.yml
+++ b/roles/uEsimulator/tasks/start.yml
@@ -2,10 +2,10 @@
 
 - name: check if servers and config server length are equal
   fail:
-    msg: "Number of srsran nodes and servers in config file are not equal"
+    msg: "Mismatch in No of servers and srsran nodes: {{ srsran.servers|length }} vs {{ groups['srsran_nodes']|length }}"
   when: srsran.servers|length != groups['srsran_nodes']|length
 
-- name: check if simluation is enabled else abort
+- name: check if simulation is enabled else abort
   fail:
     msg: "Simulation is not enabled"
   when: srsran.simulation == false
