--- a/roles/router/tasks/install.yml
+++ b/roles/router/tasks/install.yml
@@ -1,12 +1,17 @@
 ---
 
+- name: check if servers and config server length are equal
+  fail:
+    msg: "Mismatch in number of servers and srsran nodes: {{ srsran.servers|length }} vs {{ groups['srsran_nodes']|length }}"
+  when: srsran.servers|length != groups['srsran_nodes']|length
+
 - name: set net.ipv4.conf.all.arp_filter to 1
   ansible.posix.sysctl:
     name: net.ipv4.conf.all.arp_filter
     value: '1'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: set net.ipv4.conf.all.arp_ignore to 1
@@ -15,7 +20,7 @@
     value: '1'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: set net.ipv4.conf.all.arp_announce to 2
@@ -24,7 +29,7 @@
     value: '2'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: set net.ipv4.conf.all.rp_filter to 2
@@ -33,21 +38,13 @@
     value: '2'
     sysctl_set: true
     reload: true
-  when: inventory_hostname in groups['srsran_nodes'][0]
+  when: inventory_hostname in groups['srsran_nodes']
   become: true
 
 - name: configure static route for upf traffic on srsran node
   shell: |
     ip route add {{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }} via {{ core.amf.ip }}
-  when: (inventory_hostname in groups['srsran_nodes'][0]) and (inventory_hostname not in groups['master_nodes']) and core.upf.multihop_gnb == false
+  when: (inventory_hostname in groups['srsran_nodes']) and (inventory_hostname not in groups['master_nodes']) and core.upf.multihop_gnb == false
   become: true
   ignore_errors: yes
 
-# TODO: use ansible's net_static_route module
-- name: configure static route for srsran traffic on aether node
-  shell: |
-    ip route add {{ srsran.docker.network.subnet }} via {{  hostvars[item]['ansible_default_ipv4']['address'] }}
-  with_items: "{{ play_hosts | intersect(groups['srsran_nodes'][0]) | difference(groups['master_nodes']) }}"
-  when: (inventory_hostname in groups['master_nodes'])
-  become: true
-  ignore_errors: yes
